# DiHydrogen

./: .clang-format  .clang6-format  .gitignore  .gitlab-ci.yml  .gitmodules  .uberenv_config.json  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  ReleaseNotes.txt  dihydrogen_license_template.txt
doc/: BuildDocsNoConfig.cmake  CMakeLists.txt  Doxyfile.in
doc/sphinx/: CMakeLists.txt  Makefile  conf.py  continuous_integration.rst  index.rst  requirements.txt
include/h2/: CMakeLists.txt  Version.hpp
include/h2/core/: CMakeLists.txt  allocator.hpp  device.hpp  dispatch.hpp  sync.hpp  types.hpp
include/h2/gpu/: CMakeLists.txt  error.hpp  logger.hpp  macros.hpp  memory_utils.hpp  pool_allocator.hpp  runtime.hpp  sync.hpp
include/h2/loops/: CMakeLists.txt  cpu_loops.hpp  gpu_loops.cuh  gpu_vec_helpers.cuh
include/h2/meta/: CMakeLists.txt  Core.hpp  PartialFunctions.hpp  TypeList.hpp
include/h2/patterns/: CMakeLists.txt
include/h2/tensor/: CMakeLists.txt  base_utils.hpp  copy.hpp  copy_buffer.hpp  dist_tensor.hpp  dist_tensor_base.hpp  dist_types.hpp  dist_utils.hpp  fixed_size_tuple.hpp  hydrogen_interop.hpp  io.hpp  proc_grid.hpp  raw_buffer.hpp  strided_memory.hpp  tensor.hpp  tensor_base.hpp  tensor_cpu.hpp  tensor_gpu.hpp  tensor_types.hpp  tensor_utils.hpp  tuple_utils.hpp
include/h2/utils/: As.hpp  CMakeLists.txt  Cloneable.hpp  Describable.hpp  Error.hpp  IntegerMath.hpp  Logger.hpp  const_for.hpp  environment_vars.hpp  function_traits.hpp  passkey.hpp  strings.hpp  tuple_utils.hpp  typename.hpp  unique_ptr_cast.hpp
legacy/: .gitignore  CMakeLists.txt
legacy/benchmarks/: CMakeLists.txt  benchmark_common.hpp  benchmark_common_cuda.cu  benchmark_common_cuda.hpp  cudnn_benchmark.cpp  cudnn_benchmark_jsrun.sh.in  distconv_benchmark.cpp  distconv_benchmark_bn.cpp  distconv_benchmark_common.hpp  distconv_benchmark_pooling.cpp  shuffle_benchmark.cpp
legacy/cmake/modules/: DISTCONVCMakeUtilities.cmake  FindNVSHMEM.cmake  SetupCUDAToolkit.cmake
legacy/include/: CMakeLists.txt
legacy/include/distconv/: CMakeLists.txt  base.hpp  distconv.hpp  layers.hpp  runtime.hpp  runtime_cuda.hpp  runtime_gpu.hpp  runtime_rocm.hpp  vector.hpp
legacy/include/p2p/: CMakeLists.txt  config.hpp  connection.hpp  connection_ipc.hpp  connection_mpi.hpp  connection_null.hpp  connection_self.hpp  logging.hpp  mpi.hpp  nvtx.hpp  p2p.hpp  request.hpp  util.hpp  util_cuda.hpp
legacy/scripts/: build.sh  perfmodel.py
legacy/src/: CMakeLists.txt  runtime.cpp  runtime_cuda.cpp  runtime_rocm.cpp
legacy/src/cudnn/: CMakeLists.txt  backend.cpp  backend_miopen.cpp  backend_rocm.cpp  batchnorm.cu  cross_entropy.cu  leaky_relu.cu  mean_squared_error.cu  pooling.cu  softmax.cu
legacy/src/dnn_backend/: CMakeLists.txt  backend.cpp  backend_dace.cpp  backend_miopen.cpp  batchnorm.cu  communicator_manager.cpp  cross_entropy.cu  dace_backend.cpp  dnn_backend.cpp  dnn_backend_cudnn.cpp.inc  dnn_backend_miopen.cpp.inc  dnn_lib_utils.hpp  leaky_relu.cu  mean_squared_error.cu  options.cpp  pack_unpack.cpp  pack_unpack.cu  pooling.cu  softmax.cu  stream_manager.cpp  streams_manager.cpp
legacy/src/p2p/: CMakeLists.txt  Makefile  config.cpp  connection.cpp  connection_ipc.cpp  connection_mpi.cpp  connection_mpi_kernels.cu  connection_null.cpp  connection_self.cpp  mpi.cpp  p2p.cpp  request.cpp  util_cuda.cpp
legacy/src/tensor/: CMakeLists.txt  allreduce_nvshmem.cu  channel_exchange.cu  halo_exchange_cuda.cu  halo_exchange_cuda_nvshmem.cu  runtime_cuda.cpp  runtime_rocm.cpp  shuffle_mpi_cuda.cu  tensor_mpi_cuda.cu
legacy/src/util/: CMakeLists.txt  nvshmem.cpp  nvshmem.cu  util.cpp  util_cuda.cpp  util_rocm.cpp
legacy/tests/: CMakeLists.txt  compare_binary_files.cpp  test_batchnorm.cpp  test_common.hpp  test_util.sh.in
legacy/tests/cudnn/: CMakeLists.txt  test_convolution_cosmoflow.sh.in  test_cudnn_util.sh.in  test_distconv.sh.in  test_leaky_relu.cpp
legacy/tests/dnn_backend/: CMakeLists.txt  chainer_pooling.py  test_leaky_relu.cpp  test_pooling.sh.in
legacy/tests/p2p/: CMakeLists.txt  benchmark_exchange_ring.cu  benchmark_pingpong_put.cpp  benchmark_pingpong_sendrecv.cu  test_bandwidth_neighbor.cu  test_pingpong_sendrecv.cu  test_put.cpp  test_ring.cpp  test_sendrecv.cpp  test_util.hpp  test_util_cuda.cu  test_util_cuda.hpp
legacy/tests/tensor/: CMakeLists.txt  run_all.sh  test_allreduce_cuda.cu  test_concat_mpi_cuda.cu  test_halo_exchange_cuda.cu  test_halo_exchange_cuda.sh.in  test_tensor.cpp  test_tensor.hpp  test_tensor.sh.in  test_tensor_cuda.cu  test_tensor_cuda.sh.in  test_tensor_mpi.cpp  test_tensor_mpi.sh.in  test_tensor_mpi_copy.cpp  test_tensor_mpi_cuda.cu  test_tensor_mpi_cuda_algorithms.cu  test_tensor_mpi_cuda_algorithms.sh.in  test_tensor_mpi_cuda_common.hpp  test_tensor_mpi_cuda_copy.cu  test_tensor_mpi_cuda_copy.sh.in  test_tensor_mpi_cuda_shuffle.cu  test_tensor_mpi_shuffle.cpp  test_tensor_mpi_shuffle.sh.in
src/: CMakeLists.txt  Version.cpp
src/core/: CMakeLists.txt  dispatch.cpp
src/gpu/: CMakeLists.txt  logger.cpp  memory_utils.cpp
src/gpu/cuda/: runtime.cpp
src/gpu/rocm/: runtime.cpp
src/tensor/: CMakeLists.txt  base_utils.cpp  copy.cpp  copy.cu
src/tensor/init/: CMakeLists.txt  fill.cpp  fill.cu
src/utils/: CMakeLists.txt  Error.cpp  Logger.cpp  environment_vars.cpp  logger_internals.hpp  typename.cpp
src/utils/logging/: hostname_pattern.hpp  rank_pattern.hpp  size_pattern.hpp
test/: CMakeLists.txt
test/static_test/: CMakeLists.txt
test/static_test/core/: CMakeLists.txt  types.cpp
test/static_test/meta/: CMakeLists.txt  static_test_core.cpp
test/static_test/tensor/: CMakeLists.txt  fixed_size_tuple.cpp  strided_memory.cpp  tensor_types.cpp
test/static_test/utils/: CMakeLists.txt  static_test_cloneable.cpp  static_test_function_traits.cpp  static_test_tuple_utils.cpp
test/unit_test/: CMakeLists.txt  GPUCatchMain.cpp  LoggerDriver.cpp  LoggerTest.cpp  MPICatchMain.cpp  SequentialCatchMain.cpp  VersionTest.cpp  mpi_cumulative_reporter.cpp  mpi_event_listener.cpp  mpi_utils.hpp  wait.cu  wait.hpp
test/unit_test/core/: CMakeLists.txt  (+5 more)
(+295 files in other folders)
